# openremoteslide.old

./: CHANGELOG.txt  CONTRIBUTING.txt  LICENSE.txt  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  build4lnx.sh  build4osx.sh  build4win.sh  config.h  config.h.in  config.status  configure  configure.ac  ld.exe.stackdump  libtool  openremoteslide.pc  openremoteslide.pc.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
doc/: Doxyfile
doc/html/: deprecated.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  openremoteslide_8h.html  openremoteslide_8h_source.html
m4/: libtool.m4
src/: libopenremoteslide.la  make-tables.c  openremoteslide-cache.c  openremoteslide-cairo.h  openremoteslide-decode-gdkpixbuf.c  openremoteslide-decode-gdkpixbuf.h  openremoteslide-decode-jp2k.c  openremoteslide-decode-jp2k.h  openremoteslide-decode-jpeg.c  openremoteslide-decode-jpeg.h  openremoteslide-decode-png.c  openremoteslide-decode-png.h  openremoteslide-decode-sqlite.c  openremoteslide-decode-sqlite.h  openremoteslide-decode-tiff.c  openremoteslide-decode-tiff.h  openremoteslide-decode-tifflike.c  openremoteslide-decode-tifflike.h  openremoteslide-decode-xml.c  openremoteslide-decode-xml.h  openremoteslide-dll.manifest  openremoteslide-dll.manifest.in  openremoteslide-dll.rc  openremoteslide-dll.rc.in  openremoteslide-error.c  openremoteslide-error.h  openremoteslide-features.h  openremoteslide-grid.c  openremoteslide-hash.c  openremoteslide-hash.h  openremoteslide-jdatasrc.c  openremoteslide-private.h  openremoteslide-tables.c  openremoteslide-url.h  openremoteslide-util.c  openremoteslide-vendor-aperio.c  openremoteslide-vendor-generic-tiff.c  openremoteslide-vendor-hamamatsu.c  openremoteslide-vendor-leica.c  openremoteslide-vendor-mirax.c  (+31 more)
src/.deps/: src_libopenremoteslide_la-openremoteslide-cache.Plo  src_libopenremoteslide_la-openremoteslide-decode-gdkpixbuf.Plo  src_libopenremoteslide_la-openremoteslide-decode-jp2k.Plo  src_libopenremoteslide_la-openremoteslide-decode-jpeg.Plo  src_libopenremoteslide_la-openremoteslide-decode-png.Plo  src_libopenremoteslide_la-openremoteslide-decode-sqlite.Plo  src_libopenremoteslide_la-openremoteslide-decode-tiff.Plo  src_libopenremoteslide_la-openremoteslide-decode-tifflike.Plo  src_libopenremoteslide_la-openremoteslide-decode-xml.Plo  src_libopenremoteslide_la-openremoteslide-error.Plo  src_libopenremoteslide_la-openremoteslide-grid.Plo  src_libopenremoteslide_la-openremoteslide-hash.Plo  src_libopenremoteslide_la-openremoteslide-jdatasrc.Plo  src_libopenremoteslide_la-openremoteslide-tables.Plo  src_libopenremoteslide_la-openremoteslide-util.Plo  src_libopenremoteslide_la-openremoteslide-vendor-aperio.Plo  src_libopenremoteslide_la-openremoteslide-vendor-generic-tiff.Plo  src_libopenremoteslide_la-openremoteslide-vendor-hamamatsu.Plo  src_libopenremoteslide_la-openremoteslide-vendor-leica.Plo  src_libopenremoteslide_la-openremoteslide-vendor-mirax.Plo  src_libopenremoteslide_la-openremoteslide-vendor-philips.Plo  src_libopenremoteslide_la-openremoteslide-vendor-sakura.Plo  src_libopenremoteslide_la-openremoteslide-vendor-trestle.Plo  src_libopenremoteslide_la-openremoteslide-vendor-ventana.Plo  src_libopenremoteslide_la-openremoteslide.Plo
src/.libs/: libopenremoteslide.lai  libopenremoteslide.so.0
test/: driver  driver.in  extended  extended.c  mosaic  mosaic.c  parallel  parallel.c  profile  profile.c  query  query.c  test  test-common.h  test.c  try_open  try_open.c
test/.deps/: test_extended-extended.Po  test_extended-test-common.Po  test_mosaic-mosaic.Po  test_parallel-parallel.Po  test_profile-profile.Po  test_query-query.Po  test_test-test.Po  test_try_open-test-common.Po  test_try_open-try_open.Po
test/.libs/: extended  mosaic  parallel  profile  query  test  try_open
tools/: openremoteslide-quickhash1sum  openremoteslide-quickhash1sum.1  openremoteslide-quickhash1sum.1.in  openremoteslide-quickhash1sum.c  openremoteslide-show-properties  openremoteslide-show-properties.1  openremoteslide-show-properties.1.in  openremoteslide-show-properties.c  openremoteslide-tools-common.c  openremoteslide-tools-common.h  openremoteslide-write-png  openremoteslide-write-png.1  openremoteslide-write-png.1.in  openremoteslide-write-png.c
tools/.deps/: tools_openremoteslide_quickhash1sum-openremoteslide-quickhash1sum.Po  tools_openremoteslide_quickhash1sum-openremoteslide-tools-common.Po  tools_openremoteslide_show_properties-openremoteslide-show-properties.Po  tools_openremoteslide_show_properties-openremoteslide-tools-common.Po  tools_openremoteslide_write_png-openremoteslide-tools-common.Po  tools_openremoteslide_write_png-openremoteslide-write-png.Po
tools/.libs/: openremoteslide-quickhash1sum  openremoteslide-show-properties  openremoteslide-write-png
